[package]
name = "crates_io"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
version = "0.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/crates.io"
description = "Backend of crates.io"
edition = "2024"
default-run = "server"

[workspace]
members = ["crates/*"]

[workspace.lints.rust]
future_incompatible = "warn"
nonstandard_style = "warn"
rust_2018_idioms = "warn"
rust_2018_compatibility = "warn"
rust_2021_compatibility = "warn"
unused = "warn"

[workspace.lints.rustdoc]
unescaped_backticks = "warn"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"

[package.metadata.cargo-machete]
ignored = ["astral-tokio-tar"]

[workspace.metadata.cargo-machete]
ignored = ["astral-tokio-tar"]

[lints]
workspace = true

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
opt-level = 2

[lib]
name = "crates_io"
doctest = true

[[test]]
name = "integration"
path = "src/tests/mod.rs"

[dependencies]
aes-gcm = { version = "=0.10.3", features = ["std"] }
anyhow = "=1.0.100"
astral-tokio-tar = "=0.5.6"
async-compression = { version = "=0.4.37", default-features = false, features = ["gzip", "tokio"] }
async-trait = "=0.1.89"
aws-credential-types = { version = "=1.2.11", features = ["hardcoded-credentials"] }
aws-sdk-cloudfront = "=1.108.0"
aws-sdk-sqs = "=1.92.0"
axum = { version = "=0.8.8", features = ["macros", "matched-path"] }
axum-extra = { version = "=0.12.5", features = ["erased-json", "middleware", "query", "typed-header"] }
base64 = "=0.22.1"
bigdecimal = { version = "=0.4.10", features = ["serde"] }
bon = "=3.8.2"
cargo-manifest = "=0.19.1"
colored = "=3.1.1"
crates_io_api_types = { path = "crates/crates_io_api_types" }
crates_io_cdn_logs = { path = "crates/crates_io_cdn_logs" }
crates_io_database = { path = "crates/crates_io_database" }
crates_io_database_dump = { path = "crates/crates_io_database_dump" }
crates_io_diesel_helpers = { path = "crates/crates_io_diesel_helpers" }
crates_io_docs_rs = { path = "crates/crates_io_docs_rs" }
crates_io_env_vars = { path = "crates/crates_io_env_vars" }
crates_io_fastly = { path = "crates/crates_io_fastly" }
crates_io_github = { path = "crates/crates_io_github" }
crates_io_index = { path = "crates/crates_io_index" }
crates_io_linecount = { path = "crates/crates_io_linecount" }
crates_io_markdown = { path = "crates/crates_io_markdown" }
crates_io_og_image = "=0.2.3"
crates_io_pagerduty = { path = "crates/crates_io_pagerduty" }
crates_io_real_ip = { path = "crates/crates_io_real_ip" }
crates_io_session = { path = "crates/crates_io_session" }
crates_io_tarball = { path = "crates/crates_io_tarball" }
crates_io_team_repo = { path = "crates/crates_io_team_repo" }
crates_io_trustpub = { path = "crates/crates_io_trustpub" }
crates_io_validation = { path = "crates/crates_io_validation" }
crates_io_version = { path = "crates/crates_io_version" }
crates_io_worker = { path = "crates/crates_io_worker" }
csv = "=1.4.0"
chrono = { version = "=0.4.43", default-features = false, features = ["serde"] }
clap = { version = "=4.5.54", features = ["derive", "env", "unicode", "wrap_help"] }
cookie = { version = "=0.18.1", features = ["secure"] }
deadpool-diesel = { version = "=0.6.1", features = ["postgres", "tracing"] }
derive_more = { version = "=2.1.1", features = ["deref", "deref_mut", "display"] }
dialoguer = "=0.12.0"
diesel = { version = "=2.3.5", features = ["postgres", "serde_json", "chrono", "numeric"] }
diesel-async = { version = "=0.7.4", features = ["async-connection-wrapper", "deadpool", "postgres"] }
diesel_full_text_search = "=2.3.0"
diesel_migrations = { version = "=2.3.1", features = ["postgres"] }
dotenvy = "=0.15.7"
flate2 = "=1.1.8"
futures-util = "=0.3.31"
hex = "=0.4.3"
http = "=1.4.0"
hyper = { version = "=1.8.1", features = ["client", "http1"] }
indexmap = { version = "=2.13.0", features = ["serde"] }
indicatif = "=0.18.3"
json-subscriber = "=0.2.6"
lettre = { version = "=0.11.19", default-features = false, features = ["file-transport", "smtp-transport", "hostname", "builder", "tokio1", "tokio1-native-tls"] }
minijinja = { version = "=2.14.0", features = ["loader"] }
mockall = "=0.14.0"
moka = { version = "=0.12.12", default-features = false, features = ["future"] }
native-tls = "=0.2.14"
oauth2 = "=5.0.0"
object_store = { version = "=0.13.1", features = ["aws"] }
p256 = "=0.13.2"
parking_lot = "=0.12.5"
paste = "=1.0.15"
postgres-native-tls = "=0.5.2"
prometheus = { version = "=0.14.0", default-features = false }
rand = "=0.9.2"
reqwest = { version = "=0.12.28", features = ["gzip", "json"] }
rss = { version = "=2.0.12", default-features = false, features = ["atom"] }
secrecy = "=0.10.3"
semver = { version = "=1.0.27", features = ["serde"] }
sentry = { version = "=0.46.1", features = ["tracing", "tower", "tower-axum-matched-path", "tower-http"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
sha2 = "=0.10.9"
spdx = "=0.13.3"
tar = "=0.4.44"
tempfile = "=3.24.0"
thiserror = "=2.0.18"
tikv-jemallocator = { version = "=0.6.1", features = ['unprefixed_malloc_on_supported_platforms', 'profiling'] }
tokio = { version = "=1.49.0", features = ["net", "signal", "io-std", "io-util", "rt-multi-thread", "macros", "process"]}
tokio-postgres = "=0.7.16"
tokio-util = "=0.7.18"
toml = "=0.9.10"
tower = "=0.5.3"
tower-http = { version = "=0.6.8", features = ["add-extension", "fs", "catch-panic", "timeout", "compression-full"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter", "json"] }
typomania = { version = "=0.1.2", default-features = false }
url = "=2.5.8"
utoipa = { version = "=5.4.0", features = ["chrono"] }
utoipa-axum = "=0.2.0"

[dev-dependencies]
bytes = "=1.11.0"
crates_io_docs_rs = { path = "crates/crates_io_docs_rs", features = ["mock"] }
crates_io_github = { path = "crates/crates_io_github", features = ["mock"] }
crates_io_index = { path = "crates/crates_io_index", features = ["testing"] }
crates_io_tarball = { path = "crates/crates_io_tarball", features = ["builder"] }
crates_io_team_repo = { path = "crates/crates_io_team_repo", features = ["mock"] }
crates_io_test_db = { path = "crates/crates_io_test_db" }
crates_io_test_utils = { path = "crates/crates_io_test_utils" }
crates_io_trustpub = { path = "crates/crates_io_trustpub", features = ["test-helpers"] }
claims = "=0.8.0"
diesel = { version = "=2.3.5", features = ["r2d2"] }
googletest = "=0.14.2"
insta = { version = "=1.46.1", features = ["glob", "json", "redactions"] }
jsonwebtoken = { version = "=10.2.0", features = ["aws_lc_rs"] }
quoted_printable = "=0.5.1"
regex = "=1.12.2"
sentry = { version = "=0.46.1", features = ["test"] }
tokio = "=1.49.0"
zip = { version = "=7.2.0", default-features = false, features = ["deflate"] }
