[package]
name = "crates_io"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
version = "0.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/crates.io"
description = "Backend of crates.io"
edition = "2024"
default-run = "server"

[workspace]
members = ["crates/*"]

[workspace.lints.rust]
future_incompatible = "warn"
nonstandard_style = "warn"
rust_2018_idioms = "warn"
rust_2018_compatibility = "warn"
rust_2021_compatibility = "warn"
unused = "warn"

[workspace.lints.rustdoc]
unescaped_backticks = "warn"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"

[package.metadata.cargo-machete]
ignored = ["astral-tokio-tar"]

[workspace.metadata.cargo-machete]
ignored = ["astral-tokio-tar"]

[lints]
workspace = true

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
opt-level = 2

[lib]
name = "crates_io"
doctest = true

[[test]]
name = "integration"
path = "src/tests/mod.rs"

[dependencies]
aes-gcm = { version = "=0.10.3", features = ["std"] }
anyhow = "=1.0.102"
astral-tokio-tar = "=0.6.0"
async-compression = { version = "=0.4.41", default-features = false, features = ["gzip", "tokio"] }
async-trait = "=0.1.89"
aws-credential-types = { version = "=1.2.14", features = ["hardcoded-credentials"] }
# The default `rustls` feature pulls in the legacy hyper 0.14 + rustls 0.21
# stack via `aws-smithy-runtime/tls-rustls`, which includes the vulnerable
# `rustls-webpki` v0.101.x. Using only `default-https-client` avoids this by
# using the modern rustls 0.23 + hyper 1.x stack instead.
aws-sdk-cloudfront = { version = "=1.115.0", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-sqs = { version = "=1.97.0", default-features = false, features = ["default-https-client", "rt-tokio"] }
axum = { version = "=0.8.8", features = ["macros", "matched-path"] }
axum-extra = { version = "=0.12.5", features = ["erased-json", "middleware", "query", "typed-header"] }
base64 = "=0.22.1"
bigdecimal = { version = "=0.4.10", features = ["serde"] }
bon = "=3.9.1"
cargo-manifest = "=0.19.1"
colored = "=3.1.1"
crates_io_api_types = { path = "crates/crates_io_api_types" }
crates_io_cdn_logs = { path = "crates/crates_io_cdn_logs" }
crates_io_database = { path = "crates/crates_io_database" }
crates_io_database_dump = { path = "crates/crates_io_database_dump" }
crates_io_diesel_helpers = { path = "crates/crates_io_diesel_helpers" }
crates_io_docs_rs = { path = "crates/crates_io_docs_rs" }
crates_io_env_vars = { path = "crates/crates_io_env_vars" }
crates_io_fastly = { path = "crates/crates_io_fastly" }
crates_io_github = { path = "crates/crates_io_github" }
crates_io_index = { path = "crates/crates_io_index" }
crates_io_linecount = { path = "crates/crates_io_linecount" }
crates_io_markdown = { path = "crates/crates_io_markdown" }
crates_io_og_image = "=0.2.3"
crates_io_pagerduty = { path = "crates/crates_io_pagerduty" }
crates_io_real_ip = { path = "crates/crates_io_real_ip" }
crates_io_session = { path = "crates/crates_io_session" }
crates_io_tarball = { path = "crates/crates_io_tarball" }
crates_io_team_repo = { path = "crates/crates_io_team_repo" }
crates_io_trustpub = { path = "crates/crates_io_trustpub" }
crates_io_validation = { path = "crates/crates_io_validation" }
crates_io_version = { path = "crates/crates_io_version" }
crates_io_worker = { path = "crates/crates_io_worker" }
csv = "=1.4.0"
chrono = { version = "=0.4.44", default-features = false, features = ["serde"] }
clap = { version = "=4.6.0", features = ["derive", "env", "unicode", "wrap_help"] }
cookie = { version = "=0.18.1", features = ["secure"] }
deadpool-runtime = { version = "=0.3.1", features = ["tokio_1"] }
derive_more = { version = "=2.1.1", features = ["deref", "deref_mut", "display"] }
dialoguer = "=0.12.0"
diesel = { version = "=2.3.7", features = ["postgres", "serde_json", "chrono", "numeric"] }
diesel-async = { version = "=0.8.0", features = ["async-connection-wrapper", "deadpool", "postgres"] }
diesel_full_text_search = "=2.3.0"
diesel_migrations = { version = "=2.3.1", features = ["postgres"] }
dotenvy = "=0.15.7"
flate2 = "=1.1.9"
futures-util = "=0.3.32"
hex = "=0.4.3"
http = "=1.4.0"
hyper = { version = "=1.9.0", features = ["client", "http1"] }
indexmap = { version = "=2.13.1", features = ["serde"] }
indicatif = "=0.18.4"
json-subscriber = "=0.2.8"
lettre = { version = "=0.11.21", default-features = false, features = ["file-transport", "smtp-transport", "hostname", "builder", "tokio1", "tokio1-native-tls"] }
minijinja = { version = "=2.19.0", features = ["loader"] }
mockall = "=0.14.0"
moka = { version = "=0.12.15", default-features = false, features = ["future"] }
native-tls = "=0.2.18"
oauth2 = { version = "=5.0.0", default-features = false }
object_store = { version = "=0.13.2", features = ["aws"] }
p256 = "=0.13.2"
parking_lot = "=0.12.5"
paste = "=1.0.15"
postgres-native-tls = "=0.5.3"
prometheus = { version = "=0.14.0", default-features = false }
rand = "=0.10.0"
reqwest = { version = "=0.13.2", features = ["gzip", "json", "stream"] }
rss = { version = "=2.0.12", default-features = false, features = ["atom"] }
secrecy = "=0.10.3"
semver = { version = "=1.0.28", features = ["serde"] }
sentry = { version = "=0.47.0", features = ["tracing", "tower", "tower-axum-matched-path", "tower-http"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
sha2 = "=0.11.0"
spdx = "=0.13.4"
tar = "=0.4.45"
tempfile = "=3.27.0"
thiserror = "=2.0.18"
tikv-jemallocator = { version = "=0.6.1", features = ['unprefixed_malloc_on_supported_platforms', 'profiling'] }
tokio = { version = "=1.51.0", features = ["net", "signal", "io-std", "io-util", "rt-multi-thread", "macros", "process"]}
tokio-postgres = "=0.7.17"
tokio-util = "=0.7.18"
toml = "=1.1.2"
tower = "=0.5.3"
tower-http = { version = "=0.6.8", features = ["add-extension", "fs", "catch-panic", "timeout", "compression-full"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter", "json"] }
typomania = { version = "=0.1.2", default-features = false }
url = "=2.5.8"
utoipa = { version = "=5.4.0", features = ["chrono"] }
utoipa-axum = "=0.2.0"

[dev-dependencies]
bytes = "=1.11.1"
crates_io_docs_rs = { path = "crates/crates_io_docs_rs", features = ["mock"] }
crates_io_github = { path = "crates/crates_io_github", features = ["mock"] }
crates_io_index = { path = "crates/crates_io_index", features = ["testing"] }
crates_io_tarball = { path = "crates/crates_io_tarball", features = ["builder"] }
crates_io_team_repo = { path = "crates/crates_io_team_repo", features = ["mock"] }
crates_io_test_db = { path = "crates/crates_io_test_db" }
crates_io_test_utils = { path = "crates/crates_io_test_utils" }
crates_io_trustpub = { path = "crates/crates_io_trustpub", features = ["test-helpers"] }
claims = "=0.8.0"
diesel = { version = "=2.3.7", features = ["r2d2"] }
googletest = "=0.14.2"
insta = { version = "=1.47.2", features = ["glob", "json", "redactions"] }
jsonwebtoken = { version = "=10.3.0", features = ["aws_lc_rs"] }
quoted_printable = "=0.5.2"
regex = "=1.12.3"
sentry = { version = "=0.47.0", features = ["test"] }
tokio = "=1.51.0"
zip = { version = "=8.5.0", default-features = false, features = ["deflate"] }
