[package]
name = "cargo-registry-index"
version = "0.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/crates.io"
description = "crates.io package index utilities"
edition = "2018"
resolver = "2"

[lib]
path = "lib.rs"

[features]
testing = ["serde_json"]

[dependencies]
anyhow = "=1.0.66"
base64 = "=0.13.1"
dotenv = "=0.15.0"
git2 = "=0.15.0"
serde = { version = "=1.0.147", features = ["derive"] }
tempfile = "=3.3.0"
url = "=2.3.1"
serde_json = { version = "=1.0.87", optional = true }
