[package]
name = "cargo-registry-index"
version = "0.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/crates.io"
description = "crates.io package index utilities"
edition = "2021"

[lib]
path = "lib.rs"

[features]
testing = []

[dependencies]
anyhow = "=1.0.71"
base64 = "=0.13.1"
dotenvy = "=0.15.7"
git2 = "=0.17.1"
secrecy = "=0.8.0"
serde = { version = "=1.0.163", features = ["derive"] }
serde_json = "=1.0.96"
tempfile = "=3.5.0"
tracing = "=0.1.37"
url = "=2.3.1"

[dev-dependencies]
claims = "=0.7.1"
