[package]
name = "cargo-registry-markdown"
version = "0.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/crates.io"
description = "crates.io markdown renderer"
edition = "2018"
resolver = "2"

[lib]
path = "lib.rs"

[dependencies]
ammonia = "=3.1.3"
comrak = { version = "=0.12.1", default-features = false }
htmlescape = "=0.3.1"
url = "=2.2.2"
