[package]
name = "cargo-registry-s3"
version = "0.2.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/crates.io"
description = "Interaction between crates.io and S3 for storing crate files"
edition = "2018"
resolver = "2"

[lib]
name = "s3"
path = "lib.rs"

[dependencies]
base64 = "=0.13.0"
chrono = "=0.4.19"
sha-1 = "=0.10.0"
hmac = "=0.12.0"
reqwest = { version = "=0.11.9", features = ["blocking"] }
