[package]
name = "cargo-registry-s3"
version = "0.2.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/crates.io"
description = "Interaction between crates.io and S3 for storing crate files"
edition = "2021"

[lib]
name = "s3"
path = "lib.rs"

[dependencies]
base64 = "=0.13.1"
chrono = { version = "=0.4.25", default-features = false }
sha-1 = "=0.10.1"
hmac = "=0.12.1"
reqwest = { version = "=0.11.18", features = ["blocking"] }
