[package]
name = "conduit-axum"
version = "0.0.0"
authors = ["Justin Geibel <jtgeibel@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Host a conduit based web application on an axum server"
readme = "README.md"
edition = "2021"
rust-version = "1.56.0"

[dependencies]
axum = "=0.6.1"
conduit = "=0.10.0"
conduit-router = "=0.10.0"
hyper = { version = "=0.14.23", features = ["server", "stream"] }
http = "=0.2.8"
percent-encoding = "=2.2.0"
sentry-core = { version = "=0.29.1", features = ["client"] }
thiserror = "=1.0.38"
tracing = "=0.1.37"
tokio = { version = "=1.23.0", features = ["fs"] }
tokio-stream = "=0.1.11"

[dev-dependencies]
conduit-router = "=0.10.0"
futures-util = "=0.3.25"
hyper = { version = "=0.14.23", features = ["client"] }
tokio = { version = "=1.23.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "=0.3.16"
