[package]
name = "conduit-axum"
version = "0.0.0"
authors = ["Justin Geibel <jtgeibel@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Host a conduit based web application on an axum server"
readme = "README.md"
edition = "2021"
rust-version = "1.56.0"

[dependencies]
axum = "=0.6.1"
hyper = { version = "=0.14.23", features = ["server", "stream"] }
http = "=0.2.8"
percent-encoding = "=2.2.0"
sentry-core = { version = "=0.29.1", features = ["client"] }
thiserror = "=1.0.38"
tracing = "=0.1.37"
tokio = { version = "=1.24.1", features = ["fs"] }
tokio-stream = "=0.1.11"

[dev-dependencies]
futures-util = "=0.3.25"
hyper = { version = "=0.14.23", features = ["client"] }
tokio = { version = "=1.24.1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "=0.3.16"
