[package]
name = "conduit-conditional-get"
version = "0.9.0-alpha.3"
authors = ["wycats@gmail.com",
           "Alex Crichton <alex@alexcrichton.com>"]
license = "MIT"
description = """
Middleware to transform GET into a conditional response if headers indicate that
the response is fresh.
"""
edition = "2018"

[dependencies]
conduit = { version = "0.9.0-alpha.5", path = "../conduit" }
conduit-middleware = { version = "0.9.0-alpha.4", path = "../conduit-middleware" }
time = { version = "0.2", default-features = false, features = ["std"] }

[dev-dependencies]
conduit-test = { version = "0.9.0-alpha.5", path = "../conduit-test" }
