[package]

name = "conduit-middleware"
version = "0.9.0"
authors = ["wycats@gmail.com",
           "Alex Crichton <alex@alexcrichton.com>"]
description = "HTTP Middleware interface using the conduit interface"
repository = "https://github.com/conduit-rust/conduit"
license = "MIT"
edition = "2018"

[dependencies]
conduit = { version = "0.9.0", path = "../conduit" }

[dev-dependencies]
conduit-test = { version = "0.9.0", path = "../conduit-test" }
