[workspace]
members = [
    "conduit",
    "conduit-conditional-get",
    "conduit-middleware",
    "conduit-router",
    "conduit-static",
    "conduit-test",
    # disabled until `civet` is updated to v0.10.x
    # "examples/*",
]

[patch.crates-io]
# we override the `conduit` package path here until we have imported the
# `civet` crate into this repository. `civet` is needed by the examples, but
# has a dependency on `conduit`.
conduit = { path = "conduit" }
