[package]
name = "conduit-router"
version = "0.9.0-alpha.6"
authors = ["wycats@gmail.com"]
license = "MIT"
description = "Router middleware for conduit based on route-recognizer"
repository = "https://github.com/conduit-rust/conduit-router"
edition = "2018"

[dependencies]
conduit = { version = "0.9.0-alpha.5", path = "../conduit" }
route-recognizer = "0.3"
tracing = "0.1.28"

[dev-dependencies]
conduit-test = { version = "0.9.0-alpha.5", path = "../conduit-test" }
lazy_static = "1.4.0"
tracing-subscriber = "0.2.19"
