[package]
name = "conduit-router"
version = "0.10.0"
authors = ["wycats@gmail.com"]
license = "MIT"
description = "Router middleware for conduit based on route-recognizer"
repository = "https://github.com/conduit-rust/conduit"
edition = "2018"

[dependencies]
conduit = { version ="0.10.0", path = "../conduit" }
route-recognizer = "0.3"
thiserror = "1.0.36"
tracing = "0.1.36"

[dev-dependencies]
conduit-test = { version ="0.10.0", path = "../conduit-test" }
lazy_static = "1.4.0"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
