[package]
name = "conduit-test"
version = "0.10.0"
authors = ["wycats@gmail.com",
           "Alex Crichton <alex@alexcrichton.com>"]
description = "Testing utilities for conduit-based stacks"
repository = "https://github.com/conduit-rust/conduit"
license = "MIT"
edition = "2018"

[dependencies]
bytes = "1.3.0"
conduit = { version ="0.10.0", path = "../conduit" }
hyper = "0.14.23"
