[package]
name = "conduit"
version = "0.10.0"
authors = ["wycats@gmail.com",
           "Alex Crichton <alex@alexcrichton.com>"]
description = "Common HTTP server interface"
license = "MIT"
repository = "https://github.com/conduit-rust/conduit"
edition = "2018"

[dependencies]
bytes = "=1.3.0"
http = "=0.2.8"
