[package]
name = "crates_io_cdn_logs"
version = "0.0.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
anyhow = "=1.0.79"
chrono = { version = "=0.4.33", features = ["serde"] }
percent-encoding = "=2.3.1"
semver = "=1.0.21"
tokio = { version = "=1.35.1", features = ["io-util"] }
tracing = "=0.1.40"

[dev-dependencies]
claims = "=0.7.1"
insta = "=1.34.0"
tokio = { version = "=1.35.1", features = ["macros", "rt"] }
tracing-subscriber = { version = "=0.3.18", features = ["env-filter"] }
