[package]
name = "crates_io_github"
version = "0.0.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
anyhow = "=1.0.76"
async-trait = "=0.1.76"
oauth2 = { version = "=4.4.2", default-features = false }
reqwest = { version = "=0.11.23", features = ["json"] }
serde = { version = "=1.0.194", features = ["derive"] }
thiserror = "=1.0.51"
tracing = "=0.1.40"

[dev-dependencies]
