[package]
name = "crates_io_github"
version = "0.0.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
anyhow = "=1.0.80"
async-trait = "=0.1.77"
oauth2 = { version = "=4.4.2", default-features = false }
reqwest = { version = "=0.11.24", features = ["json"] }
serde = { version = "=1.0.197", features = ["derive"] }
thiserror = "=1.0.57"
tracing = "=0.1.40"

[dev-dependencies]
