[package]
name = "crates_io_index"
version = "0.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/crates.io"
description = "crates.io package index utilities"
edition = "2021"

[lib]
path = "lib.rs"

[features]
testing = []

[dependencies]
anyhow = "=1.0.72"
base64 = "=0.21.2"
dotenvy = "=0.15.7"
git2 = "=0.17.2"
secrecy = "=0.8.0"
serde = { version = "=1.0.173", features = ["derive"] }
serde_json = "=1.0.103"
tempfile = "=3.7.0"
tracing = "=0.1.37"
url = "=2.4.0"

[dev-dependencies]
claims = "=0.7.1"
