[package]
name = "crates_io_index"
version = "0.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/crates.io"
description = "crates.io package index utilities"
edition = "2021"

[lib]
path = "lib.rs"

[features]
testing = []

[dependencies]
anyhow = "=1.0.75"
base64 = "=0.21.4"
dotenvy = "=0.15.7"
git2 = "=0.18.0"
secrecy = "=0.8.0"
serde = { version = "=1.0.188", features = ["derive"] }
serde_json = "=1.0.107"
tempfile = "=3.8.0"
tracing = "=0.1.37"
url = "=2.4.1"

[dev-dependencies]
claims = "=0.7.1"
