[package]
name = "crates_io_index"
version = "0.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/crates.io"
description = "crates.io package index utilities"
edition = "2021"

[lints]
workspace = true

[lib]
path = "lib.rs"

[features]
testing = []

[dependencies]
anyhow = "=1.0.79"
base64 = "=0.21.6"
crates_io_env_vars = { path = "../crates_io_env_vars" }
dotenvy = "=0.15.7"
git2 = "=0.18.1"
secrecy = "=0.8.0"
serde = { version = "=1.0.195", features = ["derive"] }
serde_json = "=1.0.111"
tempfile = "=3.9.0"
tracing = "=0.1.40"
url = "=2.5.0"

[dev-dependencies]
claims = "=0.7.1"
