[package]
name = "crates_io_markdown"
version = "0.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/crates.io"
description = "crates.io markdown renderer"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
ammonia = "=3.3.0"
comrak = { version = "=0.19.0", default-features = false }
htmlescape = "=0.3.1"
url = "=2.4.1"

[dev-dependencies]
insta = "=1.34.0"
