[package]
name = "crates_io_s3"
version = "0.0.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/crates.io"
description = "Interaction between crates.io and S3 for storing crate files"
edition = "2021"

[lib]
name = "s3"
path = "lib.rs"

[dependencies]
base64 = "=0.21.2"
chrono = { version = "=0.4.26", default-features = false, features = ["clock"] }
hmac = "=0.12.1"
reqwest = { version = "=0.11.18", features = ["blocking"] }
secrecy = "=0.8.0"
sha-1 = "=0.10.1"
thiserror = "=1.0.41"
url = "=2.4.0"
