[package]
name = "crates_io_smoke_test"
version = "0.0.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
anyhow = "=1.0.79"
bytes = "=1.5.0"
clap = { version = "=4.4.14", features = ["derive", "env", "unicode", "wrap_help"] }
crates_io_index = { path = "../crates_io_index" }
reqwest = { version = "=0.11.23", features = ["gzip", "json"] }
secrecy = "=0.8.0"
semver = { version = "=1.0.21", features = ["serde"] }
serde = { version = "=1.0.195", features = ["derive"] }
serde_json = "=1.0.111"
tempfile = "=3.9.0"
thiserror = "=1.0.56"
tokio = { version = "=1.35.1", features = ["fs", "macros", "process", "rt-multi-thread"]}
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["env-filter"] }
