[package]
name = "crates_io_tarball"
version = "0.0.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
builder = []

[dependencies]
cargo-manifest = "=0.12.0"
derive_deref = "=1.1.1"
flate2 = "=1.0.27"
semver = { version = "=1.0.20", features = ["serde"] }
serde = { version = "=1.0.189", features = ["derive"] }
serde_json = "=1.0.107"
tar = "=0.4.40"
thiserror = "=1.0.49"
toml = "=0.8.2"
tracing = "=0.1.37"

[dev-dependencies]
anyhow = "=1.0.75"
claims = "=0.7.1"
clap = { version = "=4.4.6", features = ["derive", "unicode", "wrap_help"] }
indicatif = { version = "=0.17.7", features = ["rayon"] }
rayon = "=1.8.0"
tracing-subscriber = { version = "=0.3.17", features = ["env-filter"] }
walkdir = "=2.4.0"
